--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
-    rect{
-        fill: aquamarine;
-    }
+        rect {
+            fill: #f4511e;
+            border: none;
+            color: white;
+            padding: 16px 32px;
+            text-align: center;
+            font-size: 16px;
+            margin: 4px 2px;
+            fill-opacity: 0.6;
+            transition: 0.3s;
+        }
+
+        rect:hover {
+            fill-opacity: 1;
+            width: 85px;
+            
+        }
     </style>
     <title>E8</title>
 </head>
